# torchlette

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  biome.json  ckpts  data  diagnose-memleak.ts  docker-compose.yml  jsr.json  models  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  refactoring-targets.md  release-please-config.json  remote-training-design.md  run-docker-tests.sh  status-0aeeeb9.md  test-limits.mts  torchlette-testing-spec.md  torchlette-working-spec.md  tsdown.config.ts  vitest.config.browser.ts  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
bench/: fusion-vectorization.ts  matmul-comparison.ts  matmul-tile-configs.ts  runner.ts  types.ts
compartmentalization-server/: .gitignore  README.md  pyproject.toml
compartmentalization-server/experiments/: __init__.py  bio3.py  mess3.py
compartmentalization-server/src/compartmentalization_server/: __init__.py  api.py  ipc.py  manager.py  models.py  registry.py  server.py  storage.py  worker.py
docs/: agent-ops.md  architecture-debt.md  arena-recompute-design.md  attention-modifier-seams-design.md  buffer-donation-design.md  chain-packing-design.md  cleanliness-audit-2026-07.md  composite-closure-design.md  coverage-campaign-design.md  derived-optimizer-realizer-design.md  design-amendment-round-1.md  dispatch-tape-design.md  env-flag-ledger.md  execution-declaration-design.md  fp-spike-characterization.md  gemma2-port-status.md  gemma2-sae-demo-status.md  gpt2-finetuning-plan.md  (+33 more)
(+1330 files in other folders)
