[project]
name = "compartmentalization-server"
version = "0.1.0"
description = "Experiment manager + runner for compartmentalization research. Long-lived FastAPI server orchestrates training subprocesses pinned to GPUs 8-15, persists checkpoints, resumes on restart."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.5.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "websockets>=13.0",
    "numpy>=1.26.0",
]

[project.scripts]
compartmentalization-server = "compartmentalization_server.server:cli"
compartmentalization-worker = "compartmentalization_server.worker:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compartmentalization_server"]

# Install torch from PyTorch's CUDA 12.1 wheel index. The default PyPI torch
# is built for CUDA 13.x which is too new for the host's NVIDIA driver
# (currently 545.23.08, which caps at CUDA 12.3). cu121 wheels work fine.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter
